iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_variable_not_found.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Variable error: 'app_name' not found @ example-templates/errors/variable-not-found.yaml:6:15 (errno: IY2001)
  -> variable not defined in current scope

   5 | 
   6 | stack_name: "{{app_name}}-{{environment}}"
     |               ^^^^^^^^^^^ variable not defined

   available variables: environment, region

   For more info: iidy explain IY2001
